--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,8 @@
   <app-cockpit 
     (serverCreated)="onServerAdded($event)"
     (bpCreated)="onBlueprintAdded($event)"
-
-    ></app-cockpit>
+    >
+  </app-cockpit>
   <hr>
   <div class="row">
     <div class="col-xs-12">
